fixed overflow logo

--- a/src/pages/disclaimer.css
+++ b/src/pages/disclaimer.css
@@ -29,6 +29,7 @@
   gap: 12px;
   justify-content: center;
   height: 60px;
+  padding-bottom: 10px;
 }
 
 .logo-icon
