--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -8,6 +8,7 @@
   gap: 12px;
   justify-content: center;
   height: 60px;
+  padding-bottom: 10px;
 }
 
 .logo-icon
